[package]
name = "wamp-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-test ="0.4.2"
url = "2.4.0"
futures-util = "0.3.28"
json = "0.12.4"
websocket = "0.26.5"